# amber

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py  routes.py  storage.py  transcribe.py
frontend/: README.md  vite.config.ts
frontend/src/lib/: calendar.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/entries/[date]/: +page.svelte  +page.ts
