[project]
name = "amber"
version = "0.1.0"
description = "Open source, self-hostable personal time capsule app"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.1",
]

[project.scripts]
amber = "backend.app.main:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
